--- a/read_user_info/build.gradle
+++ b/read_user_info/build.gradle
@@ -23,6 +23,19 @@ dependencies {
     compile 'com.alibaba:druid:1.1.9'
     compile 'apache-log4j:log4j:1.2.8'
     compile 'mysql:mysql-connector-java:5.1.47'
+    compile 'org.apache.httpcomponents:httpmime:4.5.5'
+    compile 'org.apache.httpcomponents:httpasyncclient:4.1.3'
+    compile 'com.aliyun.oss:aliyun-sdk-oss:3.0.0'
+    //以下包主要是为解决钱盆Http通信导入，满足一些工具包的依赖，并不会主要使用
+    // https://mvnrepository.com/artifact/org.springframework/spring-core
+    compile group: 'org.springframework', name: 'spring-core', version: '4.3.10.RELEASE'
+    compile group: 'org.springframework', name: 'spring-web', version: '4.3.10.RELEASE'
+    compile group: 'org.apache.xmlgraphics', name: 'xmlgraphics-commons', version: '1.5'
+    compile group: 'com.alibaba', name: 'fastjson', version: '1.2.46'
+    compile 'com.fasterxml.jackson.core:jackson-annotations:2.8.5'
+    compile 'org.apache.logging.log4j:log4j-1.2-api:2.8.1'
+    compile 'javax.servlet:javax.servlet-api:3.1.0'
+    compile 'commons-fileupload:commons-fileupload:1.3.1'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
