--- a/read_user_info/src/main/resources/config.properties
+++ b/read_user_info/src/main/resources/config.properties
@@ -1,5 +1,5 @@
 filePath=C:/Users/Administrator/Desktop/dx_user.xlsx
-firstLine=真实姓名,身份证号,登录密码,交易密码,电话号码,邮箱,注册来源,注册时间,首次登录时间,最后一次登录时间,登录ip,钱盆ID,钱盆账号名称,开户行,银行卡号
+headLine=真实姓名,身份证号,登录密码,交易密码,电话号码,邮箱,注册来源,注册时间,首次登录时间,最后一次登录时间,登录ip,钱盆ID,钱盆账号名称,开户行,银行卡号
 isSkipFirstLine=1
 
 #数据库表语句配置
